# GPT

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile.api  EXAMPLES.md  IMPROVEMENTS.md  LICENSE  PAPERS.md  QUICK_START.md  README.md  STRUCTURE.md  demo_server.py  docker-compose.yml  pyproject.toml
api/: __init__.py  routes.py  server.py  websocket.py
evaluation/: README.md  eval_perplexity.py
frontend/: Dockerfile  next.config.js  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
hugging_face/: README.md  hgtransformer.py  huggingface_upload.py  test_hf_model.py
neuroforge/: __init__.py
neuroforge/core/: __init__.py  config.py  engine.py
neuroforge/inference/: __init__.py  streaming.py
neuroforge/training/: __init__.py  trainer.py
scripts/: setup.sh
tokenization/: README.md  __init__.py  custom_tokenizer.py
tokenization/custom_tokenizer/: __init__.py  config.py  data_processing.py  train_tokenizer.py  trainer.py
